# testOpenGL2

./: CMakeLists.txt
linking/glad/: CMakeLists.txt
linking/glad/include/glad/: glad.h
linking/glad/src/: glad.c
source/: main.cpp
source/Renderer/: ShaderProgramm.cpp  ShaderProgramm.h
